# libasm

./: Makefile  asmNote_Flags.txt  asmNote_Links.txt  asmNote_Operant.txt  run_all.sh  test
docs/: CMakeLists.txt  asmNote_JXXX.txt  asmNotes.txt  asmNotes_Commads.txt  asmNotes_Registers.txt  asmNotes_Syntax.txt
example/: main.c  main128.c  main16.c  source.txt  sum128.asm  sum16.asm  sum64.asm  sumapp  sumapp128  sumapp16
hdr/: tester.h
main/: copy.asm
src/: ft_read.asm  ft_read.s  ft_strcmp.asm  ft_strcmp.s  ft_strcpy.asm  ft_strdup.asm  ft_strlen.asm  ft_strlen.s  ft_write.asm
test/: __ft_strcmp.s  __ft_strcpy.s  __ft_strcpy_ABI.s  __ft_strlen.s  auto_test.c  ft_strcpy  ft_strcpy.c  ft_strlen  ft_strlen.c  helper.c  main.c  tester.c  tester_functions.c  wrapper.c
test_cases/: main.c
